<resources>
    <string name="app_name">Counter App Lab 4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Counter App</string>
    <string name="second_fragment_label">Details</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="next">Details</string>
    <string name="previous">Previous</string>

    <!-- Warning Dialog -->
    <string name="warning">Warning</string>
    <string name="warning_message">Count at your own risk!</string>
    <string name="ok">Dismiss</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_00">00</string>
    <string name="count">Count</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="thank_you_for_using_counter_app_this_app_was_created_by_christian_anorga_for_cs646_02">Thank you for using Counter App. This App was created by Christian Anorga for CS646.02.</string>
    <string name="rocket">rocket</string>
    <string name="camera">Camera</string>
</resources>