<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_click"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/counter_txt"
        android:layout_width="214dp"
        android:layout_height="161dp"
        android:text="@string/_00"
        android:textSize="140sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/btn_click"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:text="@string/count"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_txt" />

    <Button
        android:id="@+id/reset_click"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_click" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_click"
        app:layout_constraintVertical_bias="0.41" />

    <ImageView
        android:id="@+id/rocket_image"
        android:layout_width="152dp"
        android:layout_height="118dp"
        android:src="@android:drawable/list_selector_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_settings"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/button_first"
        app:layout_constraintTop_toBottomOf="@+id/reset_click"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>